--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,7 +4,7 @@ CFLAGS := $(shell $(XENO_CONFIG)   --posix --alchemy --cflags)
 LDFLAGS := $(shell $(XENO_CONFIG)  --posix --alchemy --ldflags)
 
 CC := gcc   
-EXECUTABLE := ex02a ex02b
+EXECUTABLE := ex02a ex02b ex02c
 
 all: $(EXECUTABLE)
 
