--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 ## Project
 notes/
 
+### Clean ###
+# Binaries
+*.exe
+*.out
+*.o
+
+# Project files
+*.prj
+
+# Directory used to store object files, abc files and assembly files
+Clean System Files/
+
+# iTasks environment extra data
+*-data/
+*-www/
+*-sapl/
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
