ex11: Move passing of SM, SD and Sensors to constructor; create Actions in main_task, but create global pointers; Make init function more pure

--- a/ex11/app.cfg
+++ b/ex11/app.cfg
@@ -3,6 +3,7 @@ INCLUDE("app_common.cfg");
 #include "app.hpp"
 
 DOMAIN(TDOM_APP) {
+CRE_TSK(FIN_TASK, { TA_NULL, 0, fin_task, TMIN_APP_TPRI + 5, STACK_SIZE, NULL });
 CRE_TSK(BT_RECV_TASK, { TA_NULL, 0, bt_recv_task, TMIN_APP_TPRI + 4, STACK_SIZE, NULL });
 CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, TMIN_APP_TPRI + 3, STACK_SIZE, NULL });
 
