--- a/ex11/app.cfg
+++ b/ex11/app.cfg
@@ -5,11 +5,13 @@ INCLUDE("app_common.cfg");
 DOMAIN(TDOM_APP) {
 CRE_TSK(FIN_TASK, { TA_NULL, 0, fin_task, TMIN_APP_TPRI + 5, STACK_SIZE, NULL });
 CRE_TSK(BT_RECV_TASK, { TA_NULL, 0, bt_recv_task, TMIN_APP_TPRI + 4, STACK_SIZE, NULL });
-CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, TMIN_APP_TPRI + 3, STACK_SIZE, NULL });
 
-CRE_TSK(AVOID_TASK, { TA_NULL, 0, avoid_task, TMIN_APP_TPRI + 2, STACK_SIZE, NULL });
-CRE_TSK(COLOR_TASK, { TA_NULL, 0, color_task, TMIN_APP_TPRI + 1, STACK_SIZE, NULL });
-CRE_TSK(WALK_TASK, { TA_NULL, 0, walk_task, TMIN_APP_TPRI, STACK_SIZE, NULL });
+CRE_TSK(AVOID_TASK, { TA_NULL, 0, avoid_task, TMIN_APP_TPRI + 3, STACK_SIZE, NULL });
+CRE_TSK(COLOR_TASK, { TA_NULL, 0, color_task, TMIN_APP_TPRI + 2, STACK_SIZE, NULL });
+CRE_TSK(WALK_TASK, { TA_NULL, 0, walk_task, TMIN_APP_TPRI + 1, STACK_SIZE, NULL });
+
+CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, TMIN_APP_TPRI, STACK_SIZE, NULL });
+
 }
 
 ATT_MOD("app.o");
