--- a/mars_rover/project/app.cfg
+++ b/mars_rover/project/app.cfg
@@ -3,8 +3,9 @@ INCLUDE("app_common.cfg");
 #include "app.hpp"
 
 DOMAIN(TDOM_APP) {
+CRE_TSK(BLUETOOTH_TASK, { TA_NULL, 0, bluetooth_task, TMIN_APP_TPRI + 2, STACK_SIZE, NULL });
 CRE_TSK(ARBITRATOR_TASK, { TA_ACT, 0, arbitrator_task, TMIN_APP_TPRI + 1, STACK_SIZE, NULL });
-CRE_TSK(BEHAVIOR_TASK, { TA_NULL, 0, behavior_task, TMIN_APP_TPRI, STACK_SIZE, NULL });
+CRE_TSK(BEHAVIOR_TASK, { TA_NULL, 0, behavior_task, TMIN_APP_TPRI + 0, STACK_SIZE, NULL });
 }
 
 ATT_MOD("app.o");
